# staffrec

./: .gitignore  README.md  brief_out.json  latest_run.json  test_brief.json  test_brief2.json
.github/workflows/: deploy.yml
backend/: Dockerfile  main.py  pyproject.toml  scratch.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: analytics.py  assignments.py  auth.py  briefs.py  candidates.py  clients.py  feedback.py
backend/tests/: test_auth.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ProtectedRoute.tsx  Sidebar.tsx
frontend/src/components/cards/: CandidateCard.tsx  ClientCard.tsx  StatusBadge.tsx
frontend/src/components/modals/: AddCandidateModal.tsx  AddClientModal.tsx  ConfirmDeleteModal.tsx  PreviewBriefModal.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  LoadingSpinner.tsx  MarkdownContent.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Login.tsx
frontend/src/pages/candidate/: BriefView.tsx
frontend/src/pages/recruiter/: Analytics.tsx  CandidateProfile.tsx  ClientProfile.tsx  Dashboard.tsx  FeedbackForm.tsx
frontend/src/services/: api.ts  assignmentService.ts  briefService.ts  candidateService.ts  clientService.ts  feedbackService.ts
frontend/src/types/: index.ts
