[project]
name = "backend"
version = "0.1.0"
description = "backend mvp staffinc"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.3.3",
    "uvicorn[standard]>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "boto3>=1.34.0",
    "email-validator>=2.1.0",
    "fastapi-mail>=1.4.1",
]
